RESOLVED FIXED84328
Media Stream API: Piece of code cleanup for the chromium port
https://bugs.webkit.org/show_bug.cgi?id=84328
Summary Media Stream API: Piece of code cleanup for the chromium port
Jeremy Mao
Reported 2012-04-19 04:33:58 PDT
Created attachment 137877 [details] Patch Remove some dead code, please see the attachment.
Attachments
Patch (3.34 KB, patch)
2012-04-19 04:33 PDT, Jeremy Mao
webkit.review.bot: commit-queue-
Patch (7.16 KB, patch)
2012-04-19 05:12 PDT, Jeremy Mao
no flags
Patch (7.16 KB, patch)
2012-04-19 05:16 PDT, Jeremy Mao
tkent: review+
Patch (7.74 KB, patch)
2012-04-19 18:36 PDT, Jeremy Mao
tkent: review+
webkit.review.bot: commit-queue-
Patch (8.17 KB, patch)
2012-04-19 19:18 PDT, Jeremy Mao
no flags
Patch (8.17 KB, patch)
2012-04-19 19:48 PDT, Jeremy Mao
no flags
WebKit Review Bot
Comment 1 2012-04-19 04:35:56 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 2 2012-04-19 04:39:32 PDT
Comment on attachment 137877 [details] Patch Attachment 137877 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12297282
Jeremy Mao
Comment 3 2012-04-19 05:12:13 PDT
Jeremy Mao
Comment 4 2012-04-19 05:16:17 PDT
Created attachment 137881 [details] Patch Fix a typo
Kent Tamura
Comment 5 2012-04-19 16:04:31 PDT
Comment on attachment 137881 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137881&action=review > Tools/DumpRenderTree/chromium/WebUserMediaClientMock.h:53 > + virtual void requestUserMedia(const WebUserMediaRequest&, const WebVector<WebMediaStreamSource>&, const WebVector<WebMediaStreamSource>&); We had better append 'OVERRIDE' to this.
Jeremy Mao
Comment 6 2012-04-19 18:36:05 PDT
Jeremy Mao
Comment 7 2012-04-19 18:36:57 PDT
(In reply to comment #5) > (From update of attachment 137881 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=137881&action=review > > > Tools/DumpRenderTree/chromium/WebUserMediaClientMock.h:53 > > + virtual void requestUserMedia(const WebUserMediaRequest&, const WebVector<WebMediaStreamSource>&, const WebVector<WebMediaStreamSource>&); > > We had better append 'OVERRIDE' to this. Fixed
Kent Tamura
Comment 8 2012-04-19 18:39:39 PDT
Comment on attachment 137881 [details] Patch please use "webkit-patch upload" to upload a patch.
WebKit Review Bot
Comment 9 2012-04-19 18:40:40 PDT
Comment on attachment 138023 [details] Patch Rejecting attachment 138023 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: r_text(self._author_text) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/checkout/changelog.py", line 156, in _parse_author_text return [ChangeLogEntry._parse_author_name_and_email(author) for author in authors] File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/checkout/changelog.py", line 148, in _parse_author_name_and_email return {'name': match.group("name"), 'email': match.group("email")} AttributeError: 'NoneType' object has no attribute 'group' Full output: http://queues.webkit.org/results/12460092
Jeremy Mao
Comment 10 2012-04-19 19:18:07 PDT
Kent Tamura
Comment 11 2012-04-19 19:30:43 PDT
Comment on attachment 138026 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138026&action=review > Source/WebKit/chromium/ChangeLog:1 > +2012-04-19 Mao, Yujie <yujie.mao@intel.com> Unfortunately our tool doesn't accept ',' in a person name.
Eric Seidel (no email)
Comment 12 2012-04-19 19:32:40 PDT
Looks like a bug in webkitpy's ChangeLog handling code.
Jeremy Mao
Comment 13 2012-04-19 19:42:04 PDT
(In reply to comment #11) > (From update of attachment 138026 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=138026&action=review > > > Source/WebKit/chromium/ChangeLog:1 > > +2012-04-19 Mao, Yujie <yujie.mao@intel.com> > > Unfortunately our tool doesn't accept ',' in a person name. :) It's ok, I will remove ',' in my name.
Jeremy Mao
Comment 14 2012-04-19 19:48:25 PDT
WebKit Review Bot
Comment 15 2012-04-19 20:29:52 PDT
Comment on attachment 138030 [details] Patch Clearing flags on attachment: 138030 Committed r114714: <http://trac.webkit.org/changeset/114714>
WebKit Review Bot
Comment 16 2012-04-19 20:29:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.