Media Stream API: Piece of code cleanup for the chromium port https://bugs.webkit.org/show_bug.cgi?id=84328

Patch by Jeremy Mao <yujie.mao@intel.com> on 2012-04-19
Reviewed by Kent Tamura.

Source/WebKit/chromium:

Remove some deprecated interfaces.

No new tests. No behavior changes.

* public/WebUserMediaClient.h:
Remove deprecated requestUserMedia interface.
* public/WebUserMediaRequest.h:
Remove deprecated requestSucceeded interface.
* src/UserMediaClientImpl.cpp:
(WebKit::UserMediaClientImpl::requestUserMedia):
Use the requestUserMedia split sources implementation.
* src/WebUserMediaRequest.cpp:
Remove deprecated requestSucceeded implementation.

Tools:

WebUserMediaClientMock use an old requestUserMedia interface and
Replace it with the new interface.

* DumpRenderTree/chromium/WebUserMediaClientMock.cpp:
(WebKit::WebUserMediaClientMock::requestUserMedia):
Remove the old requestUserMedia and replace it with the new.
* DumpRenderTree/chromium/WebUserMediaClientMock.h:
(WebUserMediaClientMock):

Canonical link: https://commits.webkit.org/101911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114714 268f45cc-cd09-0410-ab3c-d52691b4dbfc