Source/WebKit/chromium/public/WebUserMediaClient.h
@@ -41,9 +41,6 @@ class WebUserMediaClient {
 public:
     virtual ~WebUserMediaClient() { }
 
-    // DEPRECATED
-    virtual void requestUserMedia(const WebUserMediaRequest&, const WebVector<WebMediaStreamSource>&) { }
-
     virtual void requestUserMedia(const WebUserMediaRequest&, const WebVector<WebMediaStreamSource>& audioSources, const WebVector<WebMediaStreamSource>& videoSources) { }
 
     virtual void cancelUserMediaRequest(const WebUserMediaRequest&) = 0;
