Source/WebKit/chromium/public/WebUserMediaRequest.h
@@ -68,9 +68,6 @@ public:
     WEBKIT_EXPORT bool cameraPreferenceEnvironment() const;
     WEBKIT_EXPORT WebSecurityOrigin securityOrigin() const;
 
-    // DEPRECATED
-    WEBKIT_EXPORT void requestSucceeded(const WebVector<WebMediaStreamSource>&);
-
     WEBKIT_EXPORT void requestSucceeded(const WebVector<WebMediaStreamSource>& audioSources, const WebVector<WebMediaStreamSource>& videoSources);
     WEBKIT_EXPORT void requestFailed();
 
