Source/WebKit/chromium/src/WebUserMediaRequest.cpp
@@ -105,24 +105,6 @@ void WebUserMediaRequest::requestSucceeded(const WebVector<WebMediaStreamSource>
     m_private->succeed(audio, video);
 }
 
-// FIXME: Cleanup when the chromium code has switched to the split sources implementation.
-void WebUserMediaRequest::requestSucceeded(const WebVector<WebMediaStreamSource>& sources)
-{
-    if (m_private.isNull())
-        return;
-
-    MediaStreamSourceVector audio, video;
-    for (size_t i = 0; i < sources.size(); ++i) {
-        MediaStreamSource* curr = sources[i];
-        if (curr->type() == MediaStreamSource::TypeAudio)
-            audio.append(curr);
-        else if (curr->type() == MediaStreamSource::TypeVideo)
-            video.append(curr);
-    }
-
-    m_private->succeed(audio, video);
-}
-
 void WebUserMediaRequest::requestFailed()
 {
     m_private->fail();
